[tool.black]
line-length = 79
py36 = true

[tool.poetry]
name = "black-nb"
version = "0.0.4"
description = "Apply black to all code cells in a Jupyter notebook."
authors = [
    "Tom Catling <tomcatling@gmail.com>",
    "Liam Coatman <liam.coatman@gmail.com>"
]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/tomcatling/black-nb"
repository = "https://github.com/tomcatling/black-nb"
keywords = ["jupyter", "notebook"]
classifiers = [
    "Natural Language :: English",
]
include = ["LICENCE"]

[tool.poetry.dependencies]
python = "^3.7"
nbformat = "^4.4"
black = "=18.9b0"
Click = "^7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.660.0"
flake8 = "^3.6"
isort = "^4.3"
nox = "^2018.10"

[tool.poetry.scripts]
black-nb = "black-nb:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"